--- a/production/modules/ntp/files/ntp.conf
+++ b/production/modules/ntp/files/ntp.conf
@@ -1,1 +1,5 @@
-server fr.pool.ntp.org
+# server fr.pool.ntp.org
+server 0.fr.pool.ntp.org
+server 1.fr.pool.ntp.org
+server 2.fr.pool.ntp.org
+server 3.fr.pool.ntp.org
